feat: code profile section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         </header>
 
         <main>
+            <section class="profile">
+                <div class="profile__avatar">
+                    <div class="profile__picture"></div>
+                </div>
+                <div class="profile__info">
+                    <h1 class="profile__name">Jacques Cousteau</h1>
+                    <button class="profile__edit-button"></button> 
+                    <P class="profile__job-description">Explorer</P>
+                </div>
+                <button class="profile__add-button"></button>
+            </section>
                 
         </main>
 
