feat: code gallery section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,53 @@
                 </div>
                 <button class="profile__add-button"></button>
             </section>
+
+            <section class="gallery">
+                <ul class="gallery__list">
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/arches-national-park-utah.jpg" alt="arches national park utah">
+                        <div class="gallery__description">
+                            <p class="gallery__text">Arches national park, Utah</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/colorado.jpg" alt="Colorado">
+                        <div class="gallery__description">
+                            <p class="gallery__text">Colorado</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/mount-Rainier-washington.jpg" alt="mount rainier washington">
+                        <div class="gallery__description">
+                            <p class="gallery__text">Mount Rainier Washington</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>  
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/san-francisco.jpg" alt="san fransisco">
+                        <div class="gallery__description">
+                            <p class="gallery__text">San Fransisco</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>    
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/sedona.jpg" alt="sedona">
+                        <div class="gallery__description">
+                            <p class="gallery__text">Sedona</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__photo" src="./blocks/images/yosemite-valley.jpg" alt="yosemite valley">
+                        <div class="gallery__description">
+                            <p class="gallery__text">Yosemite valley</p>
+                            <button class="gallery__like-button"></button>
+                        </div>
+                    </li>
+                </ul>
+            </section>
                 
         </main>
 
