feat: code responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
 
         <main>
+            
             <section class="profile">
                 <div class="profile__avatar">
                     <div class="profile__picture"></div>
@@ -82,9 +83,16 @@
         </main>
 
         <footer class="footer">
-            <p class="footer__copyrights">© 2021 Around The U.S. by Neta Hadar Itzhak</p> 
+            <p class="footer__copyrights">© 2021 Neta Hadar Itzhak</p> 
         </footer>
-    
+        <section class="popup">
+            <div class="popup__container">
+                <button class="popup__close-button"></button>
+                <form class="popup__form">
+
+                </form>
+            </div>
+        </section>
     </div>
 </body>
 
