--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
             <div class="popup__container">
                 <button class="popup__close-button"></button>
                 <form class="popup__form">
-
+                    <h2 class="popup__form-title">Edit Profile</h2>
+                    <input class="popup__form-input" type="text" name="name" placeholder="full name">
+                    <input class="popup__form-input" type="text" name="job" placeholder="job title">
+                    <button class="popup__form-submit-button" type="submit">Save</button>
                 </form>
             </div>
         </section>
