--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Neta Hadar Itzhak at Yandex">
     <link rel="stylesheet" href="./pages/index.css">
-    <script src="./script.js"></script>
     <title>Around the U.S.</title>
 </head>
 
@@ -89,13 +88,14 @@
                 <button class="popup__close-button"></button>
                 <form class="popup__form">
                     <h2 class="popup__form-title">Edit Profile</h2>
-                    <input class="popup__form-input" type="text" name="name" placeholder="full name">
-                    <input class="popup__form-input" type="text" name="job" placeholder="job title">
+                    <input class="popup__form-input popup__form-input_name" type="text" name="name" placeholder="full name">
+                    <input class="popup__form-input popup__form-input_job" type="text" name="job" placeholder="job title">
                     <button class="popup__form-submit-button" type="submit">Save</button>
                 </form>
             </div>
         </section>
     </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
