style: change images

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <section class="gallery">
                 <ul class="gallery__list">
                     <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/arches-national-park-utah.jpg" alt="arches national park utah">
+                        <img class="gallery__photo" src="./blocks/images/huntington beach.jpg" alt="huntington beach">
                         <div class="gallery__description">
-                            <p class="gallery__text">Arches national park, Utah</p>
+                            <p class="gallery__text">Huntington beach</p>
                             <button class="gallery__like-button"></button>
                         </div>
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/colorado.jpg" alt="Colorado">
+                        <img class="gallery__photo" src="./blocks/images/vermont.jpg" alt="vermont">
                         <div class="gallery__description">
-                            <p class="gallery__text">Colorado</p>
+                            <p class="gallery__text">Vermont</p>
                             <button class="gallery__like-button"></button>
                         </div>
                     </li>
@@ -69,9 +69,9 @@
                         </div>
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/yosemite-valley.jpg" alt="yosemite valley">
+                        <img class="gallery__photo" src="./blocks/images/montauk.jpg" alt="montauk beach">
                         <div class="gallery__description">
-                            <p class="gallery__text">Yosemite valley</p>
+                            <p class="gallery__text">montauk</p>
                             <button class="gallery__like-button"></button>
                         </div>
                     </li>
