fix according to auto test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="profile__info">
                     <h1 class="profile__name">Jacques Cousteau</h1>
                     <button class="profile__edit-button"></button> 
-                    <P class="profile__job-description">Explorer</P>
+                    <p class="profile__job-description">Explorer</p>
                 </div>
                 <button class="profile__add-button"></button>
             </section>
