--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <button class="popup__close-button" type="button"></button>
                 <form class="popup__form" name="form">
                     <h2 class="popup__form-title">Edit Profile</h2>
-                    <input class="popup__form_input popup__form_input_name" type="text" name="name" placeholder="full name">
-                    <input class="popup__form_input popup__form_input_job" type="text" name="job" placeholder="job title">
+                    <input class="popup__form-input popup__form-input_field_name" type="text" name="name" placeholder="full name">
+                    <input class="popup__form-input popup__form-input_field_job" type="text" name="job" placeholder="job title">
                     <button class="popup__form-submit-button" type="submit">Save</button>
                 </form>
             </div>
