--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <section class="profile">
                 <div class="profile__picture"></div>
                 <div class="profile__info">
-                    <div>
+                    <div class="profile__info-title">
                         <h1 class="profile__name">Jacques Cousteau</h1>
-                        <p class="profile__job-description">Explorer</p>
+                        <button class="profile__edit-button" type="button" aria-label="edit button"></button> 
                     </div>
-                    <button class="profile__edit-button" type="button" aria-label="edit button"></button> 
+                    <p class="profile__job-description">Explorer</p>
                 </div>
                 <button class="profile__add-button" type="button" aria-label="add button"></button>
             </section>
