refactor: create card tamplate

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
             </div>
         </section>
     </div>
+    <template>
+        <li class="gallery__item">
+            <img class="gallery__photo" src="" alt="">
+            <div class="gallery__description">
+                <h2 class="gallery__text"></h2>
+                <button class="gallery__like-button" type="button" aria-label="like button"></button>
+            </div>
+        </li>
+    </template>
     <script src="./script.js"></script>
 </body>
 
