--- a/index.html
+++ b/index.html
@@ -32,48 +32,7 @@
 
             <section class="gallery">
                 <ul class="gallery__list">
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/huntington-beach.jpg" alt="huntington beach">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">Huntington beach</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/vermont.jpg" alt="vermont">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">Vermont</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/mount-Rainier-washington.jpg" alt="mount rainier washington">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">Mount Rainier Washington</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>  
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/san-francisco.jpg" alt="san fransisco">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">San Fransisco</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>    
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/sedona.jpg" alt="sedona">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">Sedona</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="gallery__item">
-                        <img class="gallery__photo" src="./blocks/images/montauk.jpg" alt="montauk beach">
-                        <div class="gallery__description">
-                            <h2 class="gallery__text">montauk</h2>
-                            <button class="gallery__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
+                    <!-- gallery items are added by JS -->
                 </ul>
             </section>   
         </main>
@@ -94,7 +53,7 @@
             </div>
         </section>
     </div>
-    <template>
+    <template id="gallery-post">
         <li class="gallery__item">
             <img class="gallery__photo" src="" alt="">
             <div class="gallery__description">
