refactor: create add post popup

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                 </form>
             </div>
         </section>
+        <section class="popup popup_type_post">
+            <div class="popup__container">
+                <button class="popup__close-button popup__close-button_type_post" type="button"></button>
+                <form class="popup__form popup__form_type_new-post" name="form">
+                    <h2 class="popup__form-title">New place</h2>
+                    <input class="popup__form-input popup__form-input_field_title" type="text" name="name" placeholder="Title">
+                    <input class="popup__form-input popup__form-input_field_link" type="text" name="job" placeholder="Image link">
+                    <button class="popup__form-submit-button" type="submit">Create</button>
+                </form>
+            </div>
+        </section>
     </div>
     <template id="gallery-post">
         <li class="gallery__item">
