style: fix width of photo's popup and gallery__photo's attributes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <template id="gallery-post">
         <li class="gallery__item">
             <button class="gallery__trash-button" type="button" aria-label="delete button"></button>
-            <img class="gallery__photo" src="" alt="">
+            <img class="gallery__photo">
             <div class="gallery__description">
                 <h2 class="gallery__text"></h2>
                 <button class="gallery__like-button" type="button" aria-label="like button"></button>
