--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </footer>
         
         <section>
-            <div class="popup">
+            <div class="popup popup_type_profile">
                 <div class="popup__container">
                     <button class="popup__close-button" type="button"></button>
-                    <form class="popup__form" name="form">
+                    <form class="popup__form popup__form_type_profile" name="form">
                         <h2 class="popup__form-title">Edit Profile</h2>
                         <input class="popup__form-input popup__form-input_field_name" type="text" name="name" placeholder="full name">
                         <input class="popup__form-input popup__form-input_field_job" type="text" name="job" placeholder="job title">
