refactor: add Card class for creating new posts

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
     </div>
-    <template id="gallery-post">
+    <template class="gallery-post">
       <li class="gallery__item">
         <button
           class="gallery__trash-button"
@@ -149,6 +149,7 @@
       </li>
     </template>
     <script src="./validate.js" type="module"></script>
+    <script src="./card.js" type="module"></script>
     <script src="./script.js" type="module"></script>
   </body>
 </html>
