--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     </template>
     <script src="./validate.js" type="module"></script>
     <script src="./card.js" type="module"></script>
+    <script src="./common.js" type="module"></script>
     <script src="./script.js" type="module"></script>
   </body>
 </html>
