refactor: change file name from validate.js to handleFormErrors.js and create FormValidation class

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <script src="./validate.js" type="module"></script>
     <script src="./card.js" type="module"></script>
     <script src="./handlePopup.js" type="module"></script>
+    <script src="FormValidator.js" type="module"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
