refactor: link handleFormErrors.js to index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               class="popup__close-button popup__close-button_type_photo"
               type="button"
             ></button>
-            <img class="popup__photo" src=" " alt=" " />
+            <img class="popup__photo" src="./blocks/images/huntington-beach.jpg" alt="Huntington beach" />
             <h3 class="popup__text"></h3>
           </div>
         </div>
@@ -148,7 +148,7 @@
         </div>
       </li>
     </template>
-    <script src="./validate.js" type="module"></script>
+    <script src="./handleFormErrors.js" type="module"></script>
     <script src="./card.js" type="module"></script>
     <script src="./handlePopup.js" type="module"></script>
     <script src="FormValidator.js" type="module"></script>
