refactor: delete handleForm.js, move methods to FormValidate.js and fix resetValidation method. Style: change content with to fixed width

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 required
               />
               <span id="link-input-error"></span>
-              <button class="popup__form-submit-button" type="submit">
+              <button class="popup__form-submit-button popup__form-submit-button_inactive" type="submit">
                 Create
               </button>
             </form>
@@ -149,7 +149,7 @@
       </li>
     </template>
     <script src="./handleFormErrors.js" type="module"></script>
-    <script src="./card.js" type="module"></script>
+    <script src="./Card.js" type="module"></script>
     <script src="./handlePopup.js" type="module"></script>
     <script src="FormValidator.js" type="module"></script>
     <script src="./index.js" type="module"></script>
