--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
         </div>
       </li>
     </template>
-    <script src="./handleFormErrors.js" type="module"></script>
     <script src="./Card.js" type="module"></script>
     <script src="./handlePopup.js" type="module"></script>
-    <script src="FormValidator.js" type="module"></script>
+    <script src="./FormValidator.js" type="module"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
