refactor: create add post form

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 class="popup__form-input"
                 id="title-input"
                 type="text"
-                name="title"
+                name="name"
                 placeholder="Title"
                 minlength="1"
                 maxlength="30"
