--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <header class="header">
         <img
           class="header__logo"
-          src="<%=require(./blocks/images/logo.svg)%>"
+          src="<%=require('./blocks/images/logo.svg')%>"
           alt="around the u.s. logo"
         />
       </header>
@@ -124,7 +124,7 @@
               class="popup__close-button popup__close-button_type_photo"
               type="button"
             ></button>
-            <img class="popup__photo" src="<%=require('./blocks/images/huntington-beach.jpg')%>" alt="Huntington beach" />
+            <img class="popup__photo" src="<%=require('./blocks/images/huntington-beach.jpg')%>" alt="Huntington beach"/>
             <h3 class="popup__text"></h3>
           </div>
         </div>
